--- a/src/App.css
+++ b/src/App.css
@@ -35,9 +35,8 @@ a{
 
 
 .App{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  max-width: 1280px;
+  margin: 0 auto;
 }
 
 .navigation{
@@ -150,6 +149,7 @@ a{
   width: 100%;
   color: white;
   font-family: 'Kanit', sans-serif;
+  margin-left: 2em;
 }
 
 .banner-left h2{ 
@@ -242,6 +242,7 @@ a{
 }
 
 #trade-title{  
+  padding-left: 1em;
   margin-top: 5em;
   font-family: 'Kanit', sans-serif;
   color: white;
@@ -407,7 +408,7 @@ a{
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  width: 40%;
+  width: 30%;
 }
 
 .tutorial-step{
@@ -786,11 +787,6 @@ a{
   border: 1px solid black;
 }
 
-.news-active{
-  background:none;
-  background: rgb(50,93,150);
-  background: radial-gradient(circle, rgba(50,93,150,1) 0%, rgba(36,66,106,1) 100%);
-}
 
 .news-item h2{
   color: white;
@@ -799,11 +795,17 @@ a{
   font-size: 1.2em;
 }
 
+.news-item img{
+  height: 80%;
+}
+
 .news-container{
   width: 100%;
 }
 
+
 .news-container h1{
+  text-transform: uppercase;
   white-space: pre-wrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -830,8 +832,39 @@ a{
   justify-content: space-evenly;
   align-items: center;
   margin-top: 2em;
+}
+
+
+.news-table h2{
+  color: #ffffff;
+  font-family: 'Kanit', sans-serif;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 2em;
+  font-weight: 400;
+}
+
+.news-author{
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+  align-items: center;
+  width: 15%;
+}
+
+.news-author h2{
+  font-size: 1em;
+  text-align: left;
 
 }
+
+.news-author img{
+  height: 40%;
+  margin-right: 1em;
+}
+
 
 .news-details{
   background-color: #000;
@@ -839,6 +872,18 @@ a{
   flex-direction: row;
   justify-content: space-around;
   flex-wrap: wrap;
+  position: relative;
+}
+
+.news-details p{
+  color: white;  
+  font-family: 'Kanit', sans-serif;
+  word-wrap: break-word;
+  max-width: 50%;
+}
+
+.news-details p img{
+  max-width: 1em;
 }
 
 .news-image-gallery{
@@ -851,6 +896,7 @@ a{
 
 .news-image-gallery img{
   cursor: zoom-in; 
+  max-width: 400px;
 }
 
 .news-image-gallery button{
@@ -873,20 +919,10 @@ a{
 }
 
 
-.news-details img{
-  max-width: 400px;
-}
-
 .news-image-gallery h3{
   color: white;
 }
 
-.news-details p{
-  color: white;  
-  font-family: 'Kanit', sans-serif;
-  max-width: 700px;
-  padding: 1em;
-}
 
 .news-table-element img{
   max-height: 80%;
@@ -1010,15 +1046,17 @@ a{
 }
 
 .modal-container{
+  position: relative;
   display: flex;
   flex-direction: column;
-  width: 50%;
+  height: 85%;
   background-color:#242424;
   font-family: 'Kanit', sans-serif;
 }
 
 .modal-container img{
   height: 100%;
+  width: 100%;
 }
 
 .modal-top{
@@ -1200,6 +1238,12 @@ a{
   .newsletter-container h1{font-size: 1.6em;}
   .news-container h1{font-size: 1.5em;}
   
+  .tutorial-video{display: none;}
+  .tutorial-text{width: 65%;}
+  .bar-container{margin-left: 2em;}
+  .news-details p{
+    max-width: 90%;
+  }
 }
 
 .dc-spoiler {
