--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,23 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@100;200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;500;600;700;800&display=swap');
 
-  body{
-  background-color: #212121;
+:root {
+  --black: #212121;
+  --blue: #325d96;
+}
+
+body{
+  background-color: var(--black);
 }
 
 a{
   text-decoration: none;
   color: white;
 }
+
+
 
 /* ===== Scrollbar CSS ===== */
   /* Firefox */
@@ -40,24 +49,23 @@ a{
 }
 
 .navigation{
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  max-width: 1280px;
   width: 100%;
-  background-color: #212121;
   height: 5em;
   align-items: center;
   color: white;
+  max-width: 1280px;
 }
 
 .right button{
-  background-color: #325d96;
+  background-color: var(--blue);
   border: 0;
   padding: 10px;
   color: white;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 1em;
   font-weight: 600;
   padding-right: 1em;
@@ -107,33 +115,35 @@ a{
   mask-position: 120%;
   opacity: 1;
 }
+
 .logo{margin-left: 10px;
   white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis;}
-
-.logo a{
-  font-weight: 500;
-  font-size: 2em;
+  text-overflow: ellipsis;
+  height: 100%;
+  display: flex;
+  align-items: center;
 }
 
-.logo c{
-  background-color: #325d96;
-  font-size: 0.4em;
-  padding-left: 10px;
-  padding-right: 10px;
-  border-radius: 10em;
+.logo img{
+height: 50%;
+}
+
+.logo a{
+  font-size: 1.5em;
+  margin-left: 0.5em;
 }
 
 .main-container{
   max-width: 1280px;
   width: 100%;
-  background-color: #212121;
+  background-color: var(--black);
   flex-direction: column;
   justify-content: center;
 }
 
 .banner{
+  margin-top: 1em;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -145,31 +155,111 @@ a{
   background-size: cover;
 }
 
+.projects-container{
+  width: 100%;
+  margin-top: 3em;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+  flex-wrap: wrap;
+  border-bottom: 1px solid #1717179f;
+  padding-top: 1em;
+  padding-bottom: 5em;
+}
+
+.project-item{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 1em;
+  width: 25%;
+}
+
+.project-item h1{
+  margin-bottom: 0;
+}
+
+.project-item button{
+  border: 0;
+  padding: 1em;
+  padding-left: 2em;
+  padding-right: 2em;
+  background-color: #ffffff9c;
+  color: rgb(0, 0, 0);
+  font-family: 'Montserrat', sans-serif;
+  margin-top: 1em;
+  font-weight: 600;
+  border-radius: 3em;
+  cursor: pointer;
+}
+
+.project-item button:first-child{
+  border: 0;
+  padding: 1em;
+  padding-left: 2em;
+  padding-right: 2em;
+  background-color: var(--blue);
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+  margin-top: 1em;
+  font-weight: 600;
+  border-radius: 3em;
+  cursor: pointer;
+}
+
+.note{
+  color: #4a7dc0;
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  border-bottom: 1px solid #1717179f;
+  margin: 0;
+}
+
+.note h2{
+  margin:0;
+  padding:1em;
+  font-weight: 500;
+}
+
+
 .banner-left{
   width: 100%;
   color: white;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   margin-left: 2em;
 }
 
 .banner-title{
-  font-family: 'Kanit', sans-serif;
-  font-size: 4em;
-  font-weight: 600;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 3.5em;
+  font-weight: 800;
   color: #4a7dc0;
 }
 
 .blink-caret{
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 4em;
-  font-weight: 200;
+  font-weight: 400;
+  animation: blink-caret 1s step-start infinite;
+
+}
+
+@keyframes blink-caret {
+  50% {
+    opacity: 0;
+  }
 }
 
 .banner-left p{ 
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   margin: 0;
   color: #ffffff;
   font-weight: 400;
+  max-width: 500px;
 }
 
 .banner-left b{ 
@@ -180,19 +270,22 @@ a{
   padding: 0.5em;
   padding-left: 2em;
   padding-right: 2em;
-  background-color: #325d96;
+  background-color: var(--blue);
   border: 0;
   color: white;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 1.2em;
-  font-weight: 600;
+  font-weight: 800;
   border-radius: 10em;
   cursor: pointer;
+  margin-top: 1em;
 }
 
 .banner-right img{
   margin-right: 4em;
 }
+
+
 
 .information-box{
   margin-top: 2em;
@@ -214,7 +307,7 @@ a{
   height: 10em;
   align-items: center;
   flex-direction: column;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   padding-left: 2em;
   padding-right: 2em;
   border-radius: 0.5em;
@@ -233,7 +326,7 @@ a{
   color: #ffffff;
   font-size: 1.7em;
   font-weight: 400;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .info-box h1{
@@ -241,19 +334,18 @@ a{
   color: #4a7dc0;
   font-size: 2.5em;
   font-weight: 500;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 #trade-title{  
   padding-left: 1em;
   margin-top: 5em;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   color: white;
-  font-weight: 400;
+  font-weight: 600;
   padding-bottom: 0.5em;
   font-size: 1.5em;
   margin-bottom: 0;
-  border-bottom: 1px solid #3a6eb160;
 }
 
 
@@ -263,25 +355,23 @@ a{
   flex-direction: row;
   align-items: center;
   max-width: 1280px;
-  background-color: #242424;
   position: relative;
   overflow:scroll;
   overflow-y: hidden;
-  
+  margin-top: 0;
+  background: rgb(33,33,33);
+  background: radial-gradient(circle, rgba(33,33,33,1) 0%, rgba(36,36,36,1) 50%, rgba(33,33,33,1) 100%);
 }
-
 
 .last-trade-container{
   display: flex;
   flex-direction: row;
   align-items: center;
-  color:#4a7dc0;
-  font-size: 1em;
-  margin-left: 1.5em;
-  margin-right: 1.5em;
+  margin-top: 0;
+  border-right: 1px solid black;
+  color: var(--blue);
 
 }
-
 
 .last-trade-item{
   display: flex;
@@ -289,26 +379,85 @@ a{
   justify-content: center;
   flex-direction: column;
   font-size: 2em;
-  background-color: #242424;
   padding: 0.5em;
+  margin-top: 0;
 }
 
 
+.last-trade-item a{
+  color:white;
+  font-size: 0.4em;
+  margin: 0;
+}
+
+.last-trade-item img{
+max-width: 100px;
+}
+
+.last-trade-left{
+  width: 100%;
+  position:absolute;
+  display: flex;
+  justify-content: space-between;
+}
+
 .last-trade-item h4{
-  font-size: 0.5em;
+  font-size: 0.3em;
   margin: 0;
   color: #fff;
   padding-bottom: 0.5em;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 400;
 }
 
-.last-trade-item button{
+
+.feautured-nfts{
+  margin-top: 1em;
+  border: 1px solid rgba(0, 0, 0, 0.603);
+  background: url(./images/lines.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom;
+}
+
+.feautured-nfts h2{
+  text-align: center;
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.trade-item-container{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  max-width: 1280px;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding-bottom: 2em;
+}
+
+.trade-nft-item{
+  display: flex;
+  flex-direction: column;
+  padding: 1em;
+}
+
+.trade-nft-item h4{
+  font-size: 0.7em;
+  margin: 0;
+  color: #fff;
+  padding-bottom: 0.5em;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  text-align: center;
+}
+
+.trade-nft-item button{
   width: 100%;
   border:0;
   background-color: #3a6eb1;
   color: white;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   padding:0.5em;
   border-bottom-left-radius: 1em;
   border-bottom-right-radius: 1em;
@@ -321,16 +470,60 @@ a{
   height: 100%;
   display: flex;
   flex-direction: row;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 300;
   color:white;
   border-radius: 1em;
-  margin-bottom: 10vh;
   padding-top: 2em;
   padding-bottom: 2em;
   border-top-right-radius: 0;
   border-top-left-radius: 0;
   flex-wrap: wrap;
+}
+
+.tutorial-buttons{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-bottom: 5em;
+  flex-wrap: wrap;
+}
+
+.tutorial-button{
+  padding: 0.5em;
+  width: 20%;
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.3em;
+  background-color: #181818;
+  border: 0;
+  cursor: pointer;
+  margin-top: 1em;
+  border-radius: 2em;
+}
+
+.activebutton{
+  background-color: var(--blue);
+  box-shadow: #000 1px 1px 1px 1px inset
+}
+
+
+
+#tutorial-title{
+    margin-top: 2em;
+    text-align: center;
+    text-transform: uppercase;
+    white-space: pre-wrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    color: white;
+    margin-bottom: 0;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 3em;
+    border-style: solid;
+    border-width: 3px;
+    border-image: linear-gradient(to left, var(--black) 0%, rgba(50,93,150,1) 50%, var(--black) 100%) 0% 0 100% 0/3px 0 3px 0 stretch;
 }
 
 
@@ -398,7 +591,7 @@ a{
 .bar-line{
   transition: all 5s;
   width: 5px;
-  background-color: #325d96;
+  background-color: var(--blue);
   position:absolute;
   z-index: 1;
   animation: slideDown 9s infinite linear;
@@ -419,18 +612,21 @@ a{
 }
 
 .tutorial-video{
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   width: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #4a7dc03f;
   border-radius: 10px;
   margin-right: 2em;
 }
 
+.tutorial-video video{
+  width: 100%;
+}
+
 .tutorial-text h2{
-  font-weight: 400;
+  font-weight: 600;
   margin-bottom: 0;
 }
 
@@ -462,16 +658,17 @@ a{
 }
 
 .footer-menu h4{
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 1.1em;
   margin-bottom: 0;
 }
 
 .footer-menu li{
   list-style:none;
-  font-family: 'Kanit', sans-serif;
-  font-weight: 200;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
   font-size: 1em;
+  padding-top: 0.1em;
 }
 
 .footer-menu li a{
@@ -494,7 +691,7 @@ a{
 
 .social-box a{
   display: flex;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   background-color: #00000000;
   padding: 1em;
   border-radius: 2em;
@@ -504,7 +701,7 @@ a{
   cursor: pointer;
   transition: all 1s;
   display: flex;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   padding: 1em;
   border-radius: 2em;
 }
@@ -514,7 +711,7 @@ a{
 }
 
 .footer-info{
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 300;
   color: rgba(255, 255, 255, 0.288);
   margin-top: 3em;
@@ -523,7 +720,7 @@ a{
 }
 
 .footer-info a{
-  color: #325d96;
+  color: var(--blue);
   cursor: pointer;
 }
 
@@ -536,7 +733,7 @@ a{
   width: 100%;
   margin-top: 2em;
   color: white;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -555,7 +752,7 @@ a{
 .warning button{
   border: 0;
   background-color: #0000002f;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 1.2em;
   color: white;
   padding-left: 1em;
@@ -572,7 +769,7 @@ a{
   margin: 0;
   border-top-right-radius: 1em;
   border-top-left-radius: 1em;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .trade-information h3{
@@ -599,7 +796,7 @@ a{
   width: 100%;
   display: flex;
   flex-direction: row;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .trade-line{
@@ -636,11 +833,11 @@ a{
 
 .trade-steps button{
   border: 0;
-  background-color: #325d96;
+  background-color: var(--blue);
   color: white;
   padding: 1em;
   border-radius: 5em;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 1em;
   padding-left: 4em;
   padding-right: 4em;
@@ -652,7 +849,7 @@ a{
 .trade-steps h4{
   color:white;
   margin: 0;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 300;
   font-size: 1.5em;
   margin-left: 5em;
@@ -699,7 +896,7 @@ a{
   flex-direction: row;
   justify-content: space-around;
   color:white;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 500;
 }
 
@@ -724,7 +921,7 @@ a{
 .trade-bar-line{
   transition: all 5s;
   height: 5px;
-  background-color: #325d96;
+  background-color: var(--blue);
   position:absolute;
   z-index: 1;
   border-radius: 10px;
@@ -771,6 +968,7 @@ a{
   height: 60px;
   padding-bottom: 0.5em;
   width: 100%;
+  margin-top: 0.5em;
 }
 
 .news-item{
@@ -793,7 +991,7 @@ a{
 
 .news-item h2{
   color: white;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 400;
   font-size: 1.2em;
 }
@@ -813,11 +1011,11 @@ a{
   overflow: hidden;
   text-overflow: ellipsis;
   color: white;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 3em;
   border-style: solid;
   border-width: 3px;
-  border-image: linear-gradient(to left, #212121 0%, rgba(50,93,150,1) 50%, #212121 100%) 0% 0 100% 0/3px 0 3px 0 stretch;
+  border-image: linear-gradient(to left, var(--black) 0%, rgba(50,93,150,1) 50%, var(--black) 100%) 0% 0 100% 0/3px 0 3px 0 stretch;
 }
 
 .news-container b{
@@ -840,7 +1038,7 @@ a{
 
 .news-table h2{
   color: #ffffff;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -880,7 +1078,7 @@ a{
 
 .news-details .news-content{
   color: white;  
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   word-wrap: break-word;
   max-width: 50%;
   display: block;
@@ -909,7 +1107,7 @@ a{
 
 .news-image-gallery button{
   border: 0;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   background-color: #242424;
   color: white;
   cursor: pointer;
@@ -938,7 +1136,7 @@ a{
 
 .news-table-element h3{
   color: white;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -947,7 +1145,7 @@ a{
 
 .news-table-element button{
   color: white;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   border: 0;
   background-color: #000000c7;
   padding: 1em;
@@ -983,7 +1181,7 @@ a{
   padding-top: 2em;
   padding-bottom: 2em;
   border-top: 1px solid #3a6eb1;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   width: 20%;
 }
 
@@ -992,11 +1190,11 @@ a{
   text-align: center;
   overflow: hidden;
   color: white;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 2em;
   border-style: solid;
   border-width: 3px;
-  border-image: linear-gradient(to left, #212121 0%, rgba(50,93,150,1) 50%, #212121 100%) 0% 0 100% 0/3px 0 3px 0 stretch;
+  border-image: linear-gradient(to left, var(--black) 0%, rgba(50,93,150,1) 50%, var(--black) 100%) 0% 0 100% 0/3px 0 3px 0 stretch;
 }
 
 .collection-item img{
@@ -1009,12 +1207,12 @@ a{
 .collection-item h3{margin-top: 0; font-weight: 500;}
 
 .collection-item button{
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   padding: 1em;
   padding-left: 2.5em;
   padding-right: 2.5em;
   border: 0;
-  background-color: #325d96;
+  background-color: var(--blue);
   color: white;
   cursor: pointer;
   margin-top: 2em;
@@ -1029,7 +1227,7 @@ a{
   background-color: #101010;
   border-radius: 5em;
   color: white;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 1em;
 }
 
@@ -1059,7 +1257,7 @@ a{
   flex-direction: column;
   height: 85%;
   background-color:#242424;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .modal-container img{
@@ -1080,19 +1278,18 @@ a{
 
 .modal-top h2{
   margin-left: 2em;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   color: #fff;
-
 }
 
 .modal-top button{
   margin-right: 2em;
-  border: 1px solid #325d96;
+  border: 1px solid var(--blue);
   background-color: transparent;
   color: #fff;
   padding-right: 1em;
   padding-left: 1em;
-  font-family: 'Kanit', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 800;
   cursor: pointer;
 }
@@ -1249,8 +1446,12 @@ a{
   .tutorial-video{display: none;}
   .tutorial-text{width: 65%;}
   .bar-container{margin-left: 2em;}
-  .news-details p{
+  .news-details p{max-width: 90%;}
+  .project-item{width: 100%;}
+  .tutorial-button{width: 100%;}
+  .news-details .news-content{
     max-width: 90%;
+
   }
 }
 
